Fixed iPad image distortion

--- a/personal-website/src/components/HomePage/HomePage.css
+++ b/personal-website/src/components/HomePage/HomePage.css
@@ -158,6 +158,12 @@
 	flex-direction: column;
 }
 
+.bcr-images-left > *,
+.bcr-images-right > * {
+	width: 100%;
+	height: auto;
+}
+
 .bcr-images-left {
 	width: 65%;
 	gap: 3rem;
